--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "core-js": "^3.8.3",
+    "scss": "^0.2.4",
+    "swiper": "^11.0.3",
     "vue": "^3.2.13",
+    "vue-fontawesome": "^0.0.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -19,7 +24,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "pug": "^3.0.2",
+    "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
