--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.7.1",
-    "node-sass": "^9.0.0",
     "pug": "^3.0.2",
+    "sass": "^1.93.2",
     "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
